# shrc

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
